Font sizing options implemented; Fixed bugs related to button visibility.

--- a/public/stylesheets/styles-pre.css
+++ b/public/stylesheets/styles-pre.css
@@ -3,5 +3,8 @@ body {
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
   overflow-y: hidden;
 }
+button.selected {
+  border-width: 4px;
+}
 
 
